[tool.poetry]
name = "my-langchain-learning-journey"
version = "0.1.0"
description = ""
authors = ["Dariush Bahrami <dariushbahrami1993@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.3"
fastapi = "^0.111.0"
langchain-community = "^0.2.1"
langserve = { extras = ["all"], version = "^0.2.1" }
pydantic = "1.10.15"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
